# personal_helper_bot

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
tg_bot/: app.py  bot.py  config_bot.py  settings.py
tg_bot/handlers/: client.py  common.py
wol/: actions.py  app.py  settings.py
