[tool.poetry]
name = "personal-helper"
version = "0.1.0"
description = ""
authors = ["Vbox ubuntu <ash-salman@yandex.ru>"]
readme = "README.md"
packages = [{include = "personal_helper"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
